Update Get data from Football-Data.co.uk.ipynb

--- a/Get data from Football-Data.co.uk.ipynb
+++ b/Get data from Football-Data.co.uk.ipynb
@@ -17,8 +17,6 @@
     "\n",
     "**Website:** http://pybet.wordpress.com\n",
     "\n",
-    "**Post URL:** \n",
-    "\n",
     "**Version:** 0.3\n",
     "\n",
     "**Update date:** 4/6/2015"
@@ -62,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -450,7 +448,6 @@
    },
    "outputs": [],
    "source": [
-    "data_folder = r\"C:\\Downloads\\Projects\\Bet Systems\\src\\Stoixima-online Articles\\Data\"\n",
     "files_folder = \"Files\""
    ]
   },
@@ -463,9 +460,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -489,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -509,19 +506,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11.7289998531\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_list = []\n",
     "for each_file in football_files:\n",
@@ -534,219 +523,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(156662, 117)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ABP</th>\n",
-       "      <th>AC</th>\n",
-       "      <th>AF</th>\n",
-       "      <th>AHW</th>\n",
-       "      <th>AO</th>\n",
-       "      <th>AR</th>\n",
-       "      <th>AS</th>\n",
-       "      <th>AST</th>\n",
-       "      <th>AY</th>\n",
-       "      <th>Attendance</th>\n",
-       "      <th>...</th>\n",
-       "      <th>SYA</th>\n",
-       "      <th>SYD</th>\n",
-       "      <th>SYH</th>\n",
-       "      <th>Season</th>\n",
-       "      <th>VCA</th>\n",
-       "      <th>VCD</th>\n",
-       "      <th>VCH</th>\n",
-       "      <th>WHA</th>\n",
-       "      <th>WHD</th>\n",
-       "      <th>WHH</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1996</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1996</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1996</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1996</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1996</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 103 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   ABP  AC  AF  AHW  AO  AR  AS  AST  AY  Attendance ... SYA  SYD  SYH  \\\n",
-       "0  NaN NaN NaN  NaN NaN NaN NaN  NaN NaN         NaN ... NaN  NaN  NaN   \n",
-       "1  NaN NaN NaN  NaN NaN NaN NaN  NaN NaN         NaN ... NaN  NaN  NaN   \n",
-       "2  NaN NaN NaN  NaN NaN NaN NaN  NaN NaN         NaN ... NaN  NaN  NaN   \n",
-       "3  NaN NaN NaN  NaN NaN NaN NaN  NaN NaN         NaN ... NaN  NaN  NaN   \n",
-       "4  NaN NaN NaN  NaN NaN NaN NaN  NaN NaN         NaN ... NaN  NaN  NaN   \n",
-       "\n",
-       "   Season  VCA  VCD  VCH  WHA  WHD WHH  \n",
-       "0    1996  NaN  NaN  NaN  NaN  NaN NaN  \n",
-       "1    1996  NaN  NaN  NaN  NaN  NaN NaN  \n",
-       "2    1996  NaN  NaN  NaN  NaN  NaN NaN  \n",
-       "3    1996  NaN  NaN  NaN  NaN  NaN NaN  \n",
-       "4    1996  NaN  NaN  NaN  NaN  NaN NaN  \n",
-       "\n",
-       "[5 rows x 103 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -755,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -781,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -793,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -805,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -820,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -832,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -849,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -872,12 +648,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Process data"
+    "## Process dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -908,8 +684,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -1089,7 +872,7 @@
        "[5 rows x 137 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -1108,10 +891,10 @@
     {
      "data": {
       "text/plain": [
-       "(156662, 137)"
+       "(156692, 137)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -1144,7 +927,6 @@
    ],
    "source": [
     "df.to_csv(os.path.join(files_folder, \"Football-Data_plus.csv\"), index=False)\n",
-    "df.to_csv(os.path.join(data_folder, \"Football-Data_plus.csv\"), index=False)\n",
     "df.to_excel(os.path.join(files_folder, \"Football-Data_plus.xlsx\"), index=False)\n",
     "print \"Files saved.\""
    ]
